# Engine

./: .atom-build.json  CMakeLists.txt  README  README.md  workspace.code-workspace
assets/: cabin.dae  cube.dae
assets/shaders/: fragment.glsl  msdf.frag.glsl  sdf.frag.glsl  vertex3Dcamera.glsl
include/: Camera.hpp  GWindow.hpp  Registry.hpp  Scene.hpp  Shader.hpp  ent_camera.hpp
src/: Camera.cpp  GWindow.cpp  Scene.cpp  ent_camera.cpp  main.cpp
src/components/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Orientation.hpp  PlayerControl.hpp  Position.hpp  Shader.hpp  all.hpp
src/core/: Game.cpp  Game.hpp  Window.cpp  Window.hpp
src/events/: all.hpp
src/loader/: Mesh.cpp  Mesh.hpp
src/systems/: InputSystem.cpp  InputSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
